code generator plugin 패키지명 변경, jar 파일 추가